# dom-rock-desafio-main

./: LICENSE  README.md  docker-compose.yaml
projeto-domrock/: pyproject.toml
projeto-domrock/projeto_domrock/: __init__.py
projeto-domrock/projeto_domrock/resultado/: Gráfico.pbix  relatorio.csv  relatorio.xlsx
projeto-domrock/projeto_domrock/sql/: query-tentativa1-saldo-final-diario.sql  query-tentativa2-saldo-final-anual.sql  query-tentativa3-relatorio.sql  query-tentativa3-saldo.sql  query-tentativa3-valores-diarios-acumulados.sql
